cool.output
Nonterminals useless in grammar

   expr_list


Terminals unused in grammar

   ELSE
   FI
   IF
   IN
   LET
   LOOP
   POOL
   THEN
   WHILE
   CASE
   ESAC
   OF
   DARROW
   NEW
   ISVOID
   STR_CONST
   INT_CONST
   BOOL_CONST
   NOT
   LE
   ERROR


Rules useless in grammar

   16 expr_list: /* empty */


State 9 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'

    6 feature_list: /* empty */
    7             | feature ';'
    8             | feature_list feature ';'

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID ':' TYPEID expr
   11        | OBJECTID ':' TYPEID ASSIGN expr

   12 formal_list: formal
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expr: /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9
')' (41) 9
',' (44) 13
':' (58) 9 10 11 14
';' (59) 7 8
'{' (123) 4 5 9
'}' (125) 4 5 9
error (256)
CLASS (258) 4 5
ELSE (259)
FI (260)
IF (261)
IN (262)
INHERITS (263) 5
LET (264)
LOOP (265)
POOL (266)
THEN (267)
WHILE (268)
CASE (269)
ESAC (270)
OF (271)
DARROW (272)
NEW (273)
ISVOID (274)
STR_CONST (275)
INT_CONST (276)
BOOL_CONST (277)
TYPEID (278) 4 5 9 10 11 14
OBJECTID (279) 9 10 11 14
ASSIGN (280) 11
NOT (281)
LE (282)
ERROR (283)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
class_list (38)
    on left: 2 3, on right: 1 3
class (39)
    on left: 4 5, on right: 2 3
feature_list (40)
    on left: 6 7 8, on right: 4 5 8
feature (41)
    on left: 9 10 11, on right: 7 8
formal_list (42)
    on left: 12 13, on right: 9 13
formal (43)
    on left: 14, on right: 12 13
expr (44)
    on left: 15, on right: 9 10 11


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . feature_list '}'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 12
    feature       go to state 13


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 14


state 11

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID . ':' TYPEID expr
   11        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 15
    ':'  shift, and go to state 16


state 12

    4 class: CLASS TYPEID '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 17

    feature  go to state 18


state 13

    7 feature_list: feature . ';'

    ';'  shift, and go to state 19


state 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 20
    feature       go to state 13


state 15

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 21

    formal_list  go to state 22
    formal       go to state 23


state 16

   10 feature: OBJECTID ':' . TYPEID expr
   11        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 24


state 17

    4 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 4 (class)


state 18

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 25


state 19

    7 feature_list: feature ';' .

    $default  reduce using rule 7 (feature_list)


state 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 26

    feature  go to state 18


state 21

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


state 22

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 28
    ','  shift, and go to state 29


state 23

   12 formal_list: formal .

    $default  reduce using rule 12 (formal_list)


state 24

   10 feature: OBJECTID ':' TYPEID . expr
   11        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 15 (expr)

    expr  go to state 31


state 25

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


state 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


state 27

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 32


state 28

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 33


state 29

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 21

    formal  go to state 34


state 30

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr

    $default  reduce using rule 15 (expr)

    expr  go to state 35


state 31

   10 feature: OBJECTID ':' TYPEID expr .

    $default  reduce using rule 10 (feature)


state 32

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


state 33

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 36


state 34

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


state 35

   11 feature: OBJECTID ':' TYPEID ASSIGN expr .

    $default  reduce using rule 11 (feature)


state 36

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 37


state 37

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expr '}'

    $default  reduce using rule 15 (expr)

    expr  go to state 38


state 38

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr . '}'

    '}'  shift, and go to state 39


state 39

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' .

    $default  reduce using rule 9 (feature)
